--- a/JobFinder/JobFinder.csproj
+++ b/JobFinder/JobFinder.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.6" />
@@ -16,12 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Adminstration\" />
+    <ProjectReference Include="..\JobFinder.Core\JobFinder.Core.csproj" />
+    <ProjectReference Include="..\JobFinder.Data\JobFinder.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobFinder.Core\JobFinder.Core.csproj" />
-    <ProjectReference Include="..\JobFinder.Data\JobFinder.Data.csproj" />
+    <Folder Include="Views\Shared\Shared\" />
   </ItemGroup>
 
 </Project>
